--- a/README.org
+++ b/README.org
@@ -1,22 +1,22 @@
 #+TITLE: vCardJS - a vCard 4.0 implementation in JavaScript.
 
-* Goals
-  - complete vCard 4.0 (RFC 6350) support
-  - jCard compatibility
-  - hCard compatibility
+** Goals
+   - complete vCard 4.0 (RFC 6350) support
+   - jCard compatibility
+   - hCard compatibility
 
-* Features
-  - can parse vCards.
-  - generates (roughly) jCards.
+** Features
+   - can parse vCards.
+   - generates (roughly) jCards.
 
-* TODOs
-  - implement more attributes.
-  - test with output from various software.
-  - implement: generate vcards from jcards
-  - implement: generate hcards (there's a start in [[vcard.js][https://github.com/mattt/vcard.js]]'s toHtml() method)
+** TODOs
+   - implement more attributes.
+   - test with output from various software.
+   - implement: generate vcards from jcards
+   - implement: generate hcards (there's a start in [[vcard.js][https://github.com/mattt/vcard.js]]'s toHtml() method)
 
-* Examples
-** parse a vcard from a string:
+** Examples
+*** parse a vcard from a string:
 
 #+BEGIN_SRC javascript
 
@@ -29,7 +29,7 @@ VCF.parse(input, function(vcard) {
 
 #+END_SRC
 
-** load vcard from a file:
+*** load vcard from a file:
 
 #+BEGIN_SRC html
 <!DOCTYPE html>
@@ -66,8 +66,8 @@ VCF.parse(input, function(vcard) {
 </body>
 #+END_SRC
 
-* References
-** [[http://datatracker.ietf.org/doc/rfc6350/?include_text%3D1][RFC 6350 - vCard Format Specification (Proposed Standard)]]
-** [[http://microformats.org/wiki/jCard][jCard]]
-** [[http://microformats.org/wiki/json][ufJSON - JSON representation of microformats]]
-** [[http://docs.jquery.com/QUnit][QUnit]]
+** References
+*** [[http://datatracker.ietf.org/doc/rfc6350/?include_text%3D1][RFC 6350 - vCard Format Specification (Proposed Standard)]]
+*** [[http://microformats.org/wiki/jCard][jCard]]
+*** [[http://microformats.org/wiki/json][ufJSON - JSON representation of microformats]]
+*** [[http://docs.jquery.com/QUnit][QUnit]]
