--- a/README.org
+++ b/README.org
@@ -67,7 +67,7 @@ VCF.parse(input, function(vcard) {
 #+END_SRC
 
 ** References
-*** [[http://datatracker.ietf.org/doc/rfc6350/?include_text%3D1][RFC 6350 - vCard Format Specification (Proposed Standard)]]
-*** [[http://microformats.org/wiki/jCard][jCard]]
-*** [[http://microformats.org/wiki/json][ufJSON - JSON representation of microformats]]
-*** [[http://docs.jquery.com/QUnit][QUnit]]
+   - [[http://datatracker.ietf.org/doc/rfc6350/?include_text%3D1][RFC 6350 - vCard Format Specification (Proposed Standard)]]
+   - [[http://microformats.org/wiki/jCard][jCard]]
+   - [[http://microformats.org/wiki/json][ufJSON - JSON representation of microformats]]
+   - [[http://docs.jquery.com/QUnit][QUnit]]
